[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Paarth Tandon <paarthri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.34"
chainlit = "^1.2.0"
langchain-openai = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
